--- a/src/app/cataleg/cataleg.component.html
+++ b/src/app/cataleg/cataleg.component.html
@@ -53,7 +53,7 @@
   </div>
   <div id="juegoXboxX" href="https://m.media-amazon.com/images/I/81FVLFkbylL._AC_SX385_.jpg">
     <a title="juegoXboxX">
-      <img src="../../assets/IMG/juegoXboxX.jpg.jpg" alt="juegoXboxX" height="300px"/></a><br>
+      <img src="../../assets/IMG/juegoXboxX.jpg" alt="juegoXboxX" height="300px"/></a><br>
     <p>FIFA 23: 49€</p>
   </div>
   <div id="juegoNintendoSwitch" href="https://m.media-amazon.com/images/I/71-QKS2n4yL.jpg">
