--- a/src/app/cataleg/cataleg.component.html
+++ b/src/app/cataleg/cataleg.component.html
@@ -1,5 +1,5 @@
-<html xmlns="http://www.w3.org/1999/html">
-<body>
+<!--<html xmlns="http://www.w3.org/1999/html">-->
+<!--<body>-->
 <article>
   <div class="primera_linea">
   <div id="play5" href="https://cdn.grupoelcorteingles.es/SGFM/dctm/MEDIA03/202009/18/00194481000019____4__640x640.jpg">
@@ -70,5 +70,6 @@
   </div>
   </div>
 </article>
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
+<app-footer></app-footer>
