--- a/src/app/cistella/cistella.component.html
+++ b/src/app/cistella/cistella.component.html
@@ -10,3 +10,4 @@
         <input id="Comprar_ara" name="Comprar_ara" class="a-button-input" type="submit" value="Comprar ara">
       </div>
 </article>
+<app-footer></app-footer>
