--- a/src/app/titol-logo/titol-logo.component.css
+++ b/src/app/titol-logo/titol-logo.component.css
@@ -18,8 +18,11 @@ header p{
 .username_intitle {
   margin-right: 10px;
 }
+header a{
+  color: red;
+}
 
-#userName {
+#userName,#perfil {
   text-align: right;
   font-size: 20px;
   color: red;
